cm4all-workshop (5.3) unstable; urgency=low

  * cron: enable core scheduling to avoid cross-HT attacks

 --   

cm4all-workshop (5.2) unstable; urgency=low

  * workshop: fix double close bug

 -- Max Kellermann <mk@cm4all.com>  Tue, 21 Sep 2021 21:07:20 +0200

cm4all-workshop (5.1) unstable; urgency=low

  * feature freeze
  * merge release 4.9

 -- Max Kellermann <mk@cm4all.com>  Mon, 20 Sep 2021 12:52:03 +0200

cm4all-workshop (5.0.11) unstable; urgency=low

  * workshop: fix hanging process due to blocking read from pipe

 -- Max Kellermann <mk@cm4all.com>  Sat, 18 Sep 2021 12:20:17 +0200

cm4all-workshop (5.0.10) unstable; urgency=low

  * workshop/plan: add option "private_tmp"

 -- Max Kellermann <mk@cm4all.com>  Mon, 13 Sep 2021 13:45:40 +0200

cm4all-workshop (5.0.9) unstable; urgency=low

  * spawn: Linux 5.12 compatibility

 -- Max Kellermann <mk@cm4all.com>  Wed, 05 May 2021 16:14:29 +0200

cm4all-workshop (5.0.8) unstable; urgency=low

  * spawn: move into cm4all.slice
  * spawn: fix cgroup namespaces
  * spawn: disable CLONE_IO to fix EINVAL while creating the systemd scope
  * spawn: fix hanging spawner by resetting systemd scope unit failures

 -- Max Kellermann <mk@cm4all.com>  Sun, 11 Apr 2021 06:10:09 +0200

cm4all-workshop (5.0.7) unstable; urgency=low

  * spawn: fix crash when memcg could not be opened
  * spawn: full cgroup2 support

 -- Max Kellermann <mk@cm4all.com>  Fri, 09 Apr 2021 09:00:11 +0200

cm4all-workshop (5.0.6) unstable; urgency=low

  * don't start as root, use Linux capabilities
  * spawn: always drop capabilities in pidns init
  * debian: restart after upgrade

 -- Max Kellermann <mk@cm4all.com>  Wed, 06 Jan 2021 16:15:01 +0100

cm4all-workshop (5.0.5) unstable; urgency=low

  * spawn: support "T" suffix for Terabytes in RLIMITS
  * spawn: use close_range() on Linux 5.8+
  * debian: move postinst code to sysusers.d and tmpfiles.d
  * debian: support trigger "cm4all-workshop-reload-plans"
