@@ -13,6 +13,8 @@ Restart=on-failure
 
 User=cm4all-workshop
 
+WatchdogSec=2m
+
 # Allow reading protected configuration files (with database
 # passwords).
 AmbientCapabilities=CAP_DAC_READ_SEARCH
